--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>DNA Communications</title>
+<title>VIP Communications</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <style type="text/css">
@@ -29,12 +29,12 @@ table,tr,td {
     border-spacing:0;
     background-image:none;
 }
-.dna-img {
+.VIP-img {
     display: block; 
     max-width: 100%; 
     max-height:100%;
 }
-.dna-img-mobile {
+.VIP-img-mobile {
     display: block; 
     max-width: 100%; 
     max-height:100%;
@@ -81,7 +81,7 @@ table,tr,td {
                 <td align="center">
                     <table class="wrap" border="0">
                         <tr class="wrap">
-                            <td class="wrap" bgcolor="#ffffff"><img class="dna-img" src="http://www.37.rs/dna/dna-img-head.png" border="0" alt="DNA"></td>
+                            <td class="wrap" bgcolor="#ffffff"><img class="VIP-img" src="https://www.vipmobile.rs/img/webshop/mail-header.png" border="0" alt="VIP"></td>
                         </tr>
                     </table>
                 </td>
@@ -90,7 +90,7 @@ table,tr,td {
                 <td align="center">
                     <table class="wrap" border="0">
                         <tr class="wrap">
-                            <td class="wrap" bgcolor="#ffffff"><img class="dna-img-mobile" src="http://www.37.rs/dna/dna-img-head-mobile.png" border="0" alt="DNA"></td>
+                            <td class="wrap" bgcolor="#ffffff"><img class="VIP-img-mobile" src="https://www.vipmobile.rs/img/webshop/mail-header.png" border="0" alt="VIP"></td>
                         </tr>
                     </table>
                 </td>
@@ -114,7 +114,7 @@ table,tr,td {
                         <tr class="wrap">
                             <td class="wrap text-cell" bgcolor="#ffffff">
                                 <p style="margin: 0 16px;">
-                                    <img class="dna-img" src="http://www.37.rs/dna/dna-img-interna.png" border="0" alt="DNA">
+                                    <img class="VIP-img" src="http://www.37.rs/VIP/VIP-img-interna.png" border="0" alt="VIP">
                                 </p>
                             </td>
                         </tr>
@@ -127,7 +127,7 @@ table,tr,td {
                         <tr class="wrap">
                             <td class="wrap text-cell" bgcolor="#ffffff">
                                 <p style="margin: 0 16px;">
-                                    <img class="dna-img" src="http://www.37.rs/dna/dna-img-interna-mobile.png" border="0" alt="DNA">
+                                    <img class="VIP-img" src="http://www.37.rs/VIP/VIP-img-interna-mobile.png" border="0" alt="VIP">
                                 </p>
                             </td>
                         </tr>
@@ -148,7 +148,7 @@ table,tr,td {
                                     <li style="margin-bottom: 4px;">da u situaciji za koju niko nije bio spreman, pokažete pravi karakter.</li>
                                 </ul>
                                 <p style="margin: 16px; font-family: Arial, Helvetica, sans-serif;">
-                                    Još jedno je mnogima sada postalo jasno: <a class="linky" style="color: #323232; font-weight:bold;" href="https://dna.rs/rad-ok-kuce-u-doba-korone/" target="_blank">„rad na daljinu“</a> je budućnost, a njega će morati da prate i interne komunikacije na daljinu.                                                    
+                                    Još jedno je mnogima sada postalo jasno: <a class="linky" style="color: #323232; font-weight:bold;" href="https://VIP.rs/rad-ok-kuce-u-doba-korone/" target="_blank">„rad na daljinu“</a> je budućnost, a njega će morati da prate i interne komunikacije na daljinu.                                                    
                                 </p>
                             </td>
                         </tr>
@@ -161,7 +161,7 @@ table,tr,td {
                         <tr class="wrap">
                             <td class="wrap text-cell" bgcolor="#ffffff">
                                 <p style="margin: 0">
-                                    <img class="dna-img" src="http://www.37.rs/dna/dna-img-wecan.png" border="0" alt="DNA">
+                                    <img class="VIP-img" src="http://www.37.rs/VIP/VIP-img-wecan.png" border="0" alt="VIP">
                                 </p>
                             </td>
                         </tr>
@@ -187,7 +187,7 @@ table,tr,td {
                         <tr class="wrap">
                             <td class="wrap text-cell" bgcolor="#ffffff">
                                 <p style="margin: 0">
-                                    <img class="dna-img" src="http://www.37.rs/dna/dna-img-callus.png" border="0" alt="DNA">
+                                    <img class="VIP-img" src="http://www.37.rs/VIP/VIP-img-callus.png" border="0" alt="VIP">
                                 </p>
                             </td>
                         </tr>
@@ -200,7 +200,7 @@ table,tr,td {
                         <tr class="wrap">
                             <td class="wrap text-cell" bgcolor="#ffffff">
                                 <p style="margin: 16px; font-family: Arial, Helvetica, sans-serif;">
-                                    <a target="_blank" class="linky" style="text-decoration: none; color: #323232; font-weight:bold;" href="https://dna.rs/">Vaš DNA Communications</a>
+                                    <a target="_blank" class="linky" style="text-decoration: none; color: #323232; font-weight:bold;" href="https://VIP.rs/">Vaš VIP Communications</a>
                                 </p>
                             </td>
                         </tr>
@@ -214,11 +214,11 @@ table,tr,td {
                             <td class="wrap text-cell" bgcolor="#ffffff" align="center">
                                 <table style="width: 75%">
                                     <tr>
-                                        <td style="text-align: center; width: 19%"><a href="mailto:dna@dna.rs" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/dna/dna-icon-email.png"></a></td>
-                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.facebook.com/DNAcommunications/" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/dna/dna-icon-fb.png"></a></td>
-                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.instagram.com/dna_rs/?hl=en" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/dna/dna-icon-ig.png"></a></td>
-                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.linkedin.com/company/dna-communications---serbia/" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/dna/dna-icon-li.png"></a></td>
-                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.youtube.com/user/dnacommunicationsbgd" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/dna/dna-icon-yt.png"></a></td>
+                                        <td style="text-align: center; width: 19%"><a href="mailto:VIP@VIP.rs" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/VIP/VIP-icon-email.png"></a></td>
+                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.facebook.com/VIPcommunications/" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/VIP/VIP-icon-fb.png"></a></td>
+                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.instagram.com/VIP_rs/?hl=en" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/VIP/VIP-icon-ig.png"></a></td>
+                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.linkedin.com/company/VIP-communications---serbia/" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/VIP/VIP-icon-li.png"></a></td>
+                                        <td style="text-align: center; width: 19%"><a target="_blank" href="https://www.youtube.com/user/VIPcommunicationsbgd" class="linky"><img class="socy" style="width:31px; height: 31px;" src="http://www.37.rs/VIP/VIP-icon-yt.png"></a></td>
                                     </tr>
                                 </table>
                             </td>
@@ -232,7 +232,7 @@ table,tr,td {
                         <tr class="wrap">
                             <td class="wrap text-cell" bgcolor="#ffffff" align="center">
                                 <p style="margin: 2.5rem 16px 16px 16px; font-family: Arial, Helvetica, sans-serif;">
-                                    <a style="text-decoration: none; color: #323232; font-weight: normal!important; font-size: 0.875rem;" target="_blank" class="linky2" href="https://dna.rs/">© DNA Communications 2020</a>
+                                    <a style="text-decoration: none; color: #323232; font-weight: normal!important; font-size: 0.875rem;" target="_blank" class="linky2" href="https://VIP.rs/">© VIP Communications 2020</a>
                                 </p>
                             </td>
                         </tr>
